validating price and subTotal